--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -1,15 +1,20 @@
+.container {
+    overflow: hidden;
+}
+
 .blurPage {
     z-index: -1;
     left: 0px;
     top: 0px;
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
+    position: fixed;
+    width: 100%;
+    height: 100%;
     background-color: rgba(255, 255, 255, 0.65);
 }
 
 .informations {
     padding: 0rem 1rem;
+    margin: 1rem 0rem;
     a {
         padding: 0rem 0.7rem;
     }
