--- a/styles/square.module.scss
+++ b/styles/square.module.scss
@@ -1,5 +1,5 @@
 .square {
-    position: absolute;
-    z-index: -2;
+    position: fixed;
+    z-index: -1;
     overflow: hidden;
 }
